<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alert_dialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_delete_comment_confirmation_msg"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/comment_delete_cancelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_comment_cancel"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/comment_delete_confirmTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_comment_delete"
            android:layout_alignParentEnd="true"
            android:textColor="@color/btn_orange"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</LinearLayout>