<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterDetailsActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="48dp"
        android:text="@string/what_s_your_name_reg"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameTIL"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <EditText
            android:id="@+id/firstNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/txt_first_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="11dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameTIL"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <EditText
            android:id="@+id/lastNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/txt_last_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/genderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/what_s_your_gender_reg"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/lastNameTIL"
        app:layout_constraintBottom_toTopOf="@+id/genderRL"
        app:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:id="@+id/genderRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@id/register_details_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioGroup
            android:id="@+id/genderRG"
            android:layout_width="31dp"
            android:layout_height="160dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/femaleRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <RadioButton
                android:id="@+id/maleRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>

            <RadioButton
                android:id="@+id/preferNotToSayRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:id="@+id/femaleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="12dp"

            android:text="@string/txt_female"
            android:textColor="@color/black"
            tools:ignore="RelativeOverlap" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/femaleTV"
            android:layout_marginTop="18dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/maleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider2"
            android:layout_marginStart="35dp"
            android:layout_marginTop="12dp"
            android:text="@string/txt_male"
            android:textColor="@color/black" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/maleTV"
            android:layout_marginTop="13dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/preferNotToSayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider3"
            android:layout_marginStart="35dp"
            android:layout_marginTop="12sp"
            android:text="@string/txt_prefer_not_to_say"
            android:textColor="@color/black" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/preferNotToSayTV"
            android:layout_marginTop="14dp"
            android:background="?android:attr/listDivider" />

    </RelativeLayout>

    <Button
        android:id="@+id/register_details_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="70dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/slash_button"
        android:fontFamily="@font/poppins"
        android:text="@string/btn_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>